All Visuals uploaded. US Data in Education page

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,9 @@
     <title>About Us</title>
     <style>
         /* Add your CSS here */
+      h1, h2 {
+            color: #003262;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0; /* Add this to remove the default body margin */
@@ -51,8 +54,7 @@
       <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
       <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
       <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
-        Finance</a>
-    </div>
+        Finance</a> </div>
     <h1 style="text-align: center;">About Us</h1>
     <p><br>
     </p>
@@ -60,7 +62,7 @@
     <div>
       <h2><a href="https://www.ischool.berkeley.edu/people/jose-delvalle">Jose
           Delvalle</a></h2>
-      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/profile_pictures/pic1_1.jpg?itok=VS5Qbw8F"
+      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/default_images/avatar.jpeg?itok=FFFxAPq5"
 
         alt="Jose Delvalle">
       <p>Email: jdelvalle@ischool.berkeley.edu</p>
