--- a/education.html
+++ b/education.html
@@ -5,6 +5,9 @@
     <title>Education Indicator</title>
     <style>
         /* Add your CSS here */
+      h1, h2 {
+            color: #003262;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0; /* Add this to remove the default body margin */
@@ -51,8 +54,7 @@
       <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
       <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
       <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
-        Finance</a>
-    </div>
+        Finance</a> </div>
     <h1 style="text-align: center;">Education Indicator</h1>
     <p><br>
     </p>
@@ -63,6 +65,8 @@
       Sub-Saharan Africa still lag males.</p>
     <p><br>
     </p>
+    <h2>Visual 1<br>
+    </h2>
     <div class="tableauPlaceholder" id="viz1689535743000" style="position: relative"><noscript><a
 
 href="#"><img alt="Dashboard_Gap " src="https://public.tableau.com/static/images/Cl/Claudia_Education_Gap/Dashboard_Gap/1_rss.png"
@@ -84,20 +88,53 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
 
           value="en-US"></object></div>
     <script type="text/javascript">                    var divElement = document.getElementById('viz1689535743000');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='877px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-    <p>Here's another visual that shows more.</p>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <h2>Visual 2</h2>
     <div class="tableauPlaceholder" id="viz1689535420694" style="position: relative"><noscript><a
 
 href="#"><img alt="Dashboard_Literacy " src="https://public.tableau.com/static/images/Cl/Claudia_Education_Literacy/Dashboard_Literacy/1_rss.png"
+
+style="border: none"><br></a></noscript></div>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <h1>United States Data</h1>
+    <h2>Visual 1</h2>
+    <p><br>
+    </p>
+    <div class="tableauPlaceholder" id="viz1689647228799" style="position: relative"><noscript><a
+
+href="#"><img alt="Maternal Age by Education " src="https://public.tableau.com/static/images/US/US_MaternalAge_EduLevel/MaternalAgebyEducation/1_rss.png"
+
+style="border: none"><br></a></noscript></div>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <h2>Visual 2</h2>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <div class="tableauPlaceholder" id="viz1689647318547" style="position: relative"><noscript><a
+
+href="#"><img alt="Births by Education " src="https://public.tableau.com/static/images/US/US_No_Births_EduLevel/BirthsbyEducation/1_rss.png"
 
 style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
 
           name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
 
-          value="3"> <param name="site_root" value=""><param name="name" value="Claudia_Education_Literacy/Dashboard_Literacy"><param
+          value="3"> <param name="site_root" value=""><param name="name" value="US_No_Births_EduLevel/BirthsbyEducation"><param
 
           name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
 
-          value="https://public.tableau.com/static/images/Cl/Claudia_Education_Literacy/Dashboard_Literacy/1.png">
+          value="https://public.tableau.com/static/images/US/US_No_Births_EduLevel/BirthsbyEducation/1.png">
         <param name="animate_transition" value="yes"><param name="display_static_image"
 
           value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
@@ -105,6 +142,6 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
           value="yes"><param name="display_count" value="yes"><param name="language"
 
           value="en-US"></object></div>
-    <script type="text/javascript">                    var divElement = document.getElementById('viz1689535420694');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <script type="text/javascript">                    var divElement = document.getElementById('viz1689647318547');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1027px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
   </body>
 </html>
