--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <title>Women's Advancement</title>
     <style>
         /* Add your CSS here */
+      h1, h2 {
+            color: #003262;
+        }
         body {
             font-family: Arial, sans-serif;
+          	margin: 0; /* Add this to remove the default body margin */
         }
         .navbar {
             background-color: #003262; /* Berkeley Blue */
@@ -14,6 +18,7 @@
             position: sticky;
             top: 0;
             width: 100%;
+          	z-index: 100; /* Add this to ensure the navbar is above all other elements */
         }
         .navbar a {
             float: left;
@@ -35,8 +40,7 @@
     </style>
   </head>
   <body>
-    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
-
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
           alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
       </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
         Advancement</a> <a href="aboutus.html" style="font-size: 20px; line-height: 50px;">About
@@ -44,8 +48,7 @@
       <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
       <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
       <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
-        Finance</a>
-    </div>
+        Finance</a> </div>
     <h1 style="text-align: center;">&nbsp; Visualizing Women's Advancement</h1>
     <h1 style="text-align: center;">A Global View of Women's Educational,
       Financial, and Social Wellbeing</h1>
@@ -67,6 +70,5 @@
       lower-income countries and those with economic instability due to war,
       famine, and lasting impacts of the Covid-19 pandemic.</p>
     <img src="Picture1.png" alt="" title="Women's Advancement">
-    
   </body>
 </html>
