--- a/marriage.html
+++ b/marriage.html
@@ -5,6 +5,9 @@
     <title>Marriage Indicator</title>
     <style>
         /* Add your CSS here */
+      h1, h2 {
+            color: #003262;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0; /* Add this to remove the default body margin */
@@ -41,9 +44,8 @@
         }
     </style>
   </head>
-  <body> 
-    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
-
+  <body>
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
           alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
       </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
         Advancement</a> <a href="aboutus.html" style="font-size: 20px; line-height: 50px;">About
@@ -51,8 +53,7 @@
       <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
       <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
       <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
-        Finance</a>
-    </div>
+        Finance</a> </div>
     <h1 style="text-align: center;">Marriage Indicator</h1>
     <p><br>
     </p>
@@ -61,46 +62,40 @@
       has not been enduring. East Asia has oscillated between ages in the
       mid-twenties, peaking at age 26 in 1996, while Latin America has
       experienced virtually no growth and remains at age 23.</p>
-    <div class="tableauPlaceholder" id="viz1689536020893" style="position: relative"><noscript><a
-
-href="#"><img alt="Dashboard 4 " src="https://public.tableau.com/static/images/Ma/MarriageIndicatorScoreDashboard/Dashboard4/1_rss.png"
-
-style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
-
-          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
-
-          value="3"> <param name="site_root" value=""><param name="name" value="MarriageIndicatorScoreDashboard/Dashboard4"><param
-
-          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
-
+    <p><br>
+    </p>
+    <h2>Visual 1</h2>
+    <div class="tableauPlaceholder" style="position: relative" id="viz1689536020893"><noscript><a
+href="#"><img alt="Dashboard 4 " src="https://public.tableau.com/static/images/Ma/MarriageIndicatorScoreDashboard/Dashboard4/1_rss.png"
+style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
+          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
+          value="3"> <param name="site_root" value=""><param name="name" value="MarriageIndicatorScoreDashboard/Dashboard4"><param
+          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
           value="https://public.tableau.com/static/images/Ma/MarriageIndicatorScoreDashboard/Dashboard4/1.png">
-        <param name="animate_transition" value="yes"><param name="display_static_image"
-
-          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
-
-          value="yes"><param name="display_count" value="yes"><param name="language"
-
+        <param name="animate_transition" value="yes"><param name="display_static_image"
+          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
+          value="yes"><param name="display_count" value="yes"><param name="language"
           value="en-US"></object></div>
     <script type="text/javascript">                    var divElement = document.getElementById('viz1689536020893');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='1400px';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
     <p>Here's another marriage visual. </p>
-    <div class="tableauPlaceholder" id="viz1689536210282" style="position: relative"><noscript><a
-
-href="#"><img alt="Dashboard 3 (2) " src="https://public.tableau.com/static/images/QK/QKHFPRZ98/1_rss.png"
-
-style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
-
-          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
-
-          value="3"> <param name="path" value="shared/QKHFPRZ98"> <param name="toolbar"
-
-          value="yes"><param name="static_image" value="https://public.tableau.com/static/images/QK/QKHFPRZ98/1.png">
-        <param name="animate_transition" value="yes"><param name="display_static_image"
-
-          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
-
-          value="yes"><param name="display_count" value="yes"><param name="language"
-
-          value="en-US"></object></div>
-    <script type="text/javascript">                    var divElement = document.getElementById('viz1689536210282');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='1400px';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <h2>Visual 2
+      <div class="tableauPlaceholder" id="viz1689536210282" style="position: relative"><noscript><a
+href="#"><img alt="Dashboard 3 (2) " src="https://public.tableau.com/static/images/QK/QKHFPRZ98/1_rss.png"
+style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
+            name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param
+            name="embed_code_version" value="3"> <param name="path" value="shared/QKHFPRZ98">
+          <param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/QK/QKHFPRZ98/1.png">
+          <param name="animate_transition" value="yes"><param name="display_static_image"
+            value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
+            value="yes"><param name="display_count" value="yes"><param name="language"
+            value="en-US"></object></div>
+      <script type="text/javascript">                    var divElement = document.getElementById('viz1689536210282');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='1400px';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    </h2>
   </body>
 </html>
