--- a/healthcare.html
+++ b/healthcare.html
@@ -5,6 +5,9 @@
     <title>Healthcare Indicator</title>
     <style>
         /* Add your CSS here */
+      h1, h2 {
+            color: #003262;
+        }
         body {
             font-family: Arial, sans-serif;
           margin: 0; /* Add this to remove the default body margin */
@@ -47,8 +50,7 @@
       <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
       <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
       <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
-        Finance</a>
-    </div>
+        Finance</a> </div>
     <h1 style="text-align: center;">Heath Care Indicator</h1>
     <p><br>
     </p>
@@ -59,6 +61,8 @@
       of the world.</p>
     <p><br>
     </p>
+    <h2>Visual 1<br>
+    </h2>
     <div class="tableauPlaceholder" id="viz1689527679360" style="position: relative"><noscript><a
 
 href="#"><img alt="Dash Adol " src="https://public.tableau.com/static/images/20/209_Project_Demo/DashAdol/1_rss.png"
@@ -88,7 +92,9 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
         vizElement.parentNode.insertBefore(scriptElement, vizElement);                
     </script>
-    <p> Here's another visual that shows the ...... </p>
+    <p><br>
+    </p>
+    <h2>Visual 2</h2>
     <div class="tableauPlaceholder" id="viz1689527851316" style="position: relative"><noscript><a
 
 href="#"><img alt="Maternal Deaths and Access to Health CareAfrica & South Asia "
@@ -115,7 +121,7 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
         var divElement = document.getElementById('viz1689527851316');                    
         var vizElement = divElement.getElementsByTagName('object')[0];                    
         vizElement.style.width='90%'; 
-        vizElement.style.height= '1000px'; // Set height based on width to maintain aspect ratio
+        vizElement.style.height= '827px'; // Set height based on width to maintain aspect ratio
         var scriptElement = document.createElement('script');                    
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
         vizElement.parentNode.insertBefore(scriptElement, vizElement);  
