--- a/labor.html
+++ b/labor.html
@@ -5,6 +5,9 @@
     <title>Labor and Finance Indicator</title>
     <style>
         /* Add your CSS here */
+      h1, h2 {
+            color: #003262;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0; /* Add this to remove the default body margin */
@@ -42,7 +45,9 @@
     </style>
   </head>
   <body>
-    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img
+
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
 
           alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
       </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
@@ -51,8 +56,7 @@
       <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
       <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
       <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
-        Finance</a>
-    </div>
+        Finance</a> </div>
     <h1 style="text-align: center;">Labor Indicator</h1>
     <p><br>
     </p>
@@ -61,19 +65,52 @@
       has not been enduring. East Asia has oscillated between ages in the
       mid-twenties, peaking at age 26 in 1996, while Latin America has
       experienced virtually no growth and remains at age 23.</p>
-    <div class="tableauPlaceholder" id="viz1689536020893" style="position: relative"><noscript><a
+    <p><br>
+    </p>
+    <h2 style="text-align: left;">Visual 1</h2>
+    <div class="tableauPlaceholder" id="viz1689646413359" style="position: relative; text-align: left;"><noscript><a
 
-href="#"><img alt="Dashboard 4 " src="https://public.tableau.com/static/images/Ma/MarriageIndicatorScoreDashboard/Dashboard4/1_rss.png"
+href="#"><img alt=" " src="https://public.tableau.com/static/images/LF/LF_Accounts/Accounts/1_rss.png"
 
 style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
 
           name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
 
-          value="3"> <param name="site_root" value=""><param name="name" value="MarriageIndicatorScoreDashboard/Dashboard4"><param
+          value="3"> <param name="site_root" value=""><param name="name" value="LF_Accounts/Accounts"><param
+
+          name="tabs" value="yes"><param name="toolbar" value="yes"><param name="static_image"
+
+          value="https://public.tableau.com/static/images/LF/LF_Accounts/Accounts/1.png">
+        <param name="animate_transition" value="yes"><param name="display_static_image"
+
+          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
+
+          value="yes"><param name="display_count" value="yes"><param name="language"
+
+          value="en-US"></object></div>
+    <script type="text/javascript">                    var divElement = document.getElementById('viz1689646413359');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='1366px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='818px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='1366px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='818px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.minHeight='1250px';vizElement.style.maxHeight=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <h2 style="text-align: left;">Visual 2</h2>
+    <div class="tableauPlaceholder" id="viz1689646746802" style="position: relative"><noscript><a
+
+href="#"><img alt="HoH " src="https://public.tableau.com/static/images/LF/LF_Jobs/HoH/1_rss.png"
+
+style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
+
+          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
+
+          value="3"> <param name="site_root" value=""><param name="name" value="LF_Jobs/HoH"><param
 
           name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
 
-          value="https://public.tableau.com/static/images/Ma/MarriageIndicatorScoreDashboard/Dashboard4/1.png">
+          value="https://public.tableau.com/static/images/LF/LF_Jobs/HoH/1.png">
         <param name="animate_transition" value="yes"><param name="display_static_image"
 
           value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
@@ -81,26 +118,6 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
           value="yes"><param name="display_count" value="yes"><param name="language"
 
           value="en-US"></object></div>
-    <script type="text/javascript">                    var divElement = document.getElementById('viz1689536020893');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='1400px';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-    <p>Here's another marriage visual. </p>
-    <div class="tableauPlaceholder" id="viz1689536210282" style="position: relative"><noscript><a
-
-href="#"><img alt="Dashboard 3 (2) " src="https://public.tableau.com/static/images/QK/QKHFPRZ98/1_rss.png"
-
-style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
-
-          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
-
-          value="3"> <param name="path" value="shared/QKHFPRZ98"> <param name="toolbar"
-
-          value="yes"><param name="static_image" value="https://public.tableau.com/static/images/QK/QKHFPRZ98/1.png">
-        <param name="animate_transition" value="yes"><param name="display_static_image"
-
-          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
-
-          value="yes"><param name="display_count" value="yes"><param name="language"
-
-          value="en-US"></object></div>
-    <script type="text/javascript">                    var divElement = document.getElementById('viz1689536210282');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='1400px';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <script type="text/javascript">                    var divElement = document.getElementById('viz1689646746802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1077px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
   </body>
 </html>
