--- a/healthcare.html
+++ b/healthcare.html
@@ -61,9 +61,9 @@
       of the world.</p>
     <p><br>
     </p>
-    <h2>Visual 1<br>
+    <h2 style="text-align: left;">Visual 1<br>
     </h2>
-    <div class="tableauPlaceholder" id="viz1689527679360" style="position: relative"><noscript><a
+    <div class="tableauPlaceholder" id="viz1689527679360" style="position: relative; text-align: left;"><noscript><a
 
 href="#"><img alt="Dash Adol " src="https://public.tableau.com/static/images/20/209_Project_Demo/DashAdol/1_rss.png"
 
@@ -95,36 +95,35 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
     <p><br>
     </p>
     <h2>Visual 2</h2>
-    <div class="tableauPlaceholder" id="viz1689527851316" style="position: relative"><noscript><a
+    <div class="tableauPlaceholder" id="viz1689648684513" style="position: relative"><noscript><a
 
-href="#"><img alt="Maternal Deaths and Access to Health CareAfrica & South Asia "
-
-src="https://public.tableau.com/static/images/20/209_Project_Combined/Combined/1_rss.png"
+href="#"><img alt="Dashboard 2 " src="https://public.tableau.com/static/images/20/209_Project_Combined/Dashboard2/1_rss.png"
 
 style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
 
           name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
 
-          value="3"> <param name="site_root" value=""><param name="name" value="209_Project_Combined/Combined"><param
+          value="3"> <param name="site_root" value=""><param name="name" value="209_Project_Combined/Dashboard2"><param
 
           name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
 
-          value="https://public.tableau.com/static/images/20/209_Project_Combined/Combined/1.png">
+          value="https://public.tableau.com/static/images/20/209_Project_Combined/Dashboard2/1.png">
         <param name="animate_transition" value="yes"><param name="display_static_image"
 
           value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
 
           value="yes"><param name="display_count" value="yes"><param name="language"
 
-          value="en-US"><param name="filter" value="publish=yes"></object></div>
+          value="en-US"></object></div>
     <script type="text/javascript">                    
-        var divElement = document.getElementById('viz1689527851316');                    
-        var vizElement = divElement.getElementsByTagName('object')[0];                    
-        vizElement.style.width='90%'; 
-        vizElement.style.height= '827px'; // Set height based on width to maintain aspect ratio
-        var scriptElement = document.createElement('script');                    
-        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-        vizElement.parentNode.insertBefore(scriptElement, vizElement);  
+      var divElement = document.getElementById('viz1689648684513');                    
+      var vizElement = divElement.getElementsByTagName('object')[0];                    
+      if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1366px';vizElement.style.height='795px';} 
+      else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1366px';vizElement.style.height='795px';} 
+      else { vizElement.style.width='100%';vizElement.style.height='727px';}                     
+      var scriptElement = document.createElement('script');                    
+      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+      vizElement.parentNode.insertBefore(scriptElement, vizElement);                
     </script>
   </body>
 </html>
