fixed some issues

--- a/aboutus.html
+++ b/aboutus.html
@@ -62,7 +62,7 @@
     <div>
       <h2><a href="https://www.ischool.berkeley.edu/people/jose-delvalle">Jose
           Delvalle</a></h2>
-      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/default_images/avatar.jpeg?itok=FFFxAPq5"
+      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/profile_pictures/pic1_1.jpg?itok=VS5Qbw8F"
 
         alt="Jose Delvalle">
       <p>Email: jdelvalle@ischool.berkeley.edu</p>
