--- a/education.html
+++ b/education.html
@@ -45,8 +45,7 @@
     </style>
   </head>
   <body>
-    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
-
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
           alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
       </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
         Advancement</a> <a href="aboutus.html" style="font-size: 20px; line-height: 50px;">About
@@ -67,25 +66,16 @@
     </p>
     <h2>Visual 1<br>
     </h2>
-    <div class="tableauPlaceholder" id="viz1689535743000" style="position: relative"><noscript><a
-
-href="#"><img alt="Dashboard_Gap " src="https://public.tableau.com/static/images/Cl/Claudia_Education_Gap/Dashboard_Gap/1_rss.png"
-
-style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
-
-          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
-
-          value="3"> <param name="site_root" value=""><param name="name" value="Claudia_Education_Gap/Dashboard_Gap"><param
-
-          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
-
+    <div class="tableauPlaceholder" id="viz1689535743000" style="position: relative"><noscript><a
+href="#"><img alt="Dashboard_Gap " src="https://public.tableau.com/static/images/Cl/Claudia_Education_Gap/Dashboard_Gap/1_rss.png"
+style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
+          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
+          value="3"> <param name="site_root" value=""><param name="name" value="Claudia_Education_Gap/Dashboard_Gap"><param
+          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
           value="https://public.tableau.com/static/images/Cl/Claudia_Education_Gap/Dashboard_Gap/1.png">
-        <param name="animate_transition" value="yes"><param name="display_static_image"
-
-          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
-
-          value="yes"><param name="display_count" value="yes"><param name="language"
-
+        <param name="animate_transition" value="yes"><param name="display_static_image"
+          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
+          value="yes"><param name="display_count" value="yes"><param name="language"
           value="en-US"></object></div>
     <script type="text/javascript">                    var divElement = document.getElementById('viz1689535743000');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='877px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <p><br>
@@ -95,11 +85,18 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
     <p><br>
     </p>
     <h2>Visual 2</h2>
-    <div class="tableauPlaceholder" id="viz1689535420694" style="position: relative"><noscript><a
-
-href="#"><img alt="Dashboard_Literacy " src="https://public.tableau.com/static/images/Cl/Claudia_Education_Literacy/Dashboard_Literacy/1_rss.png"
-
-style="border: none"><br></a></noscript></div>
+    <div class="tableauPlaceholder" id="viz1689649992200" style="position: relative"><noscript><a
+href="#"><img alt="Dashboard_Literacy " src="https://public.tableau.com/static/images/Cl/Claudia_Education_Literacy/Dashboard_Literacy/1_rss.png"
+style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
+          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
+          value="3"> <param name="site_root" value=""><param name="name" value="Claudia_Education_Literacy/Dashboard_Literacy"><param
+          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
+          value="https://public.tableau.com/static/images/Cl/Claudia_Education_Literacy/Dashboard_Literacy/1.png">
+        <param name="animate_transition" value="yes"><param name="display_static_image"
+          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
+          value="yes"><param name="display_count" value="yes"><param name="language"
+          value="en-US"></object></div>
+    <script type="text/javascript">                    var divElement = document.getElementById('viz1689649992200');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <p><br>
     </p>
     <p><br>
@@ -108,39 +105,37 @@ style="border: none"><br></a></noscript></div>
     <h2>Visual 1</h2>
     <p><br>
     </p>
-    <div class="tableauPlaceholder" id="viz1689647228799" style="position: relative"><noscript><a
-
-href="#"><img alt="Maternal Age by Education " src="https://public.tableau.com/static/images/US/US_MaternalAge_EduLevel/MaternalAgebyEducation/1_rss.png"
-
-style="border: none"><br></a></noscript></div>
     <p><br>
     </p>
     <p><br>
     </p>
+    <div class="tableauPlaceholder" id="viz1689650060120" style="position: relative"><noscript><a
+href="#"><img alt="Maternal Age by Education " src="https://public.tableau.com/static/images/US/US_MaternalAge_EduLevel/MaternalAgebyEducation/1_rss.png"
+style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
+          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
+          value="3"> <param name="site_root" value=""><param name="name" value="US_MaternalAge_EduLevel/MaternalAgebyEducation"><param
+          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
+          value="https://public.tableau.com/static/images/US/US_MaternalAge_EduLevel/MaternalAgebyEducation/1.png">
+        <param name="animate_transition" value="yes"><param name="display_static_image"
+          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
+          value="yes"><param name="display_count" value="yes"><param name="language"
+          value="en-US"></object></div>
+    <script type="text/javascript">                    var divElement = document.getElementById('viz1689650060120');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1127px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <h2>Visual 2</h2>
     <p><br>
     </p>
     <p><br>
     </p>
-    <div class="tableauPlaceholder" id="viz1689647318547" style="position: relative"><noscript><a
-
-href="#"><img alt="Births by Education " src="https://public.tableau.com/static/images/US/US_No_Births_EduLevel/BirthsbyEducation/1_rss.png"
-
-style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
-
-          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
-
-          value="3"> <param name="site_root" value=""><param name="name" value="US_No_Births_EduLevel/BirthsbyEducation"><param
-
-          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
-
+    <div class="tableauPlaceholder" id="viz1689647318547" style="position: relative"><noscript><a
+href="#"><img alt="Births by Education " src="https://public.tableau.com/static/images/US/US_No_Births_EduLevel/BirthsbyEducation/1_rss.png"
+style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
+          name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
+          value="3"> <param name="site_root" value=""><param name="name" value="US_No_Births_EduLevel/BirthsbyEducation"><param
+          name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image"
           value="https://public.tableau.com/static/images/US/US_No_Births_EduLevel/BirthsbyEducation/1.png">
-        <param name="animate_transition" value="yes"><param name="display_static_image"
-
-          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
-
-          value="yes"><param name="display_count" value="yes"><param name="language"
-
+        <param name="animate_transition" value="yes"><param name="display_static_image"
+          value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
+          value="yes"><param name="display_count" value="yes"><param name="language"
           value="en-US"></object></div>
     <script type="text/javascript">                    var divElement = document.getElementById('viz1689647318547');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1027px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
   </body>
