Updated labor visuals

--- a/labor.html
+++ b/labor.html
@@ -57,30 +57,26 @@
       <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
       <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
         Finance</a> </div>
-    <h1 style="text-align: center;">Labor Indicator</h1>
+    <h1 style="text-align: center;">Labor & Finance Indicators</h1>
     <p><br>
     </p>
-    <p>Generally, the age at first marriage for females has been increasing over
-      the past decades globally. However, in some regions, growth has stalled or
-      has not been enduring. East Asia has oscillated between ages in the
-      mid-twenties, peaking at age 26 in 1996, while Latin America has
-      experienced virtually no growth and remains at age 23.</p>
+    <p>While women have steadily gained greater access to financial resources and employment opportunities around the world, this improvement has progressed at different rates in different regions. Many countries also saw conditions improve for women in parallel to men's but failing to make up significant ground in the gap between genders.</p>
     <p><br>
     </p>
-    <h2 style="text-align: left;">Visual 1</h2>
-    <div class="tableauPlaceholder" id="viz1689646413359" style="position: relative; text-align: left;"><noscript><a
+    <h2 style="text-align: left;">Bank Accounts</h2>
+    <div class="tableauPlaceholder" id="viz1689664679110" style="position: relative; text-align: left;"><noscript><a
 
-href="#"><img alt=" " src="https://public.tableau.com/static/images/LF/LF_Accounts/Accounts/1_rss.png"
+href="#"><img alt=" " src="https://public.tableau.com/static/images/LF/LF_Accounts/Accounts_Region/1_rss.png"
 
 style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param
 
           name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version"
 
-          value="3"> <param name="site_root" value=""><param name="name" value="LF_Accounts/Accounts"><param
+          value="3"> <param name="site_root" value=""><param name="name" value="LF_Accounts/Accounts_Region"><param
 
           name="tabs" value="yes"><param name="toolbar" value="yes"><param name="static_image"
 
-          value="https://public.tableau.com/static/images/LF/LF_Accounts/Accounts/1.png">
+          value="https://public.tableau.com/static/images/LF/LF_Accounts/Accounts_Region/1.png">
         <param name="animate_transition" value="yes"><param name="display_static_image"
 
           value="yes"><param name="display_spinner" value="yes"><param name="display_overlay"
@@ -88,7 +84,7 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
           value="yes"><param name="display_count" value="yes"><param name="language"
 
           value="en-US"></object></div>
-    <script type="text/javascript">                    var divElement = document.getElementById('viz1689646413359');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='1366px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='818px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='1366px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='818px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.minHeight='1250px';vizElement.style.maxHeight=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <script type="text/javascript">                    var divElement = document.getElementById('viz1689664679110');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='1366px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='818px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='1366px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='818px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.minHeight='1250px';vizElement.style.maxHeight=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <p><br>
     </p>
     <p><br>
@@ -97,7 +93,7 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
     </p>
     <p><br>
     </p>
-    <h2 style="text-align: left;">Visual 2</h2>
+    <h2 style="text-align: left;">Jobs and Opportunities</h2>
     <div class="tableauPlaceholder" id="viz1689646746802" style="position: relative"><noscript><a
 
 href="#"><img alt="HoH " src="https://public.tableau.com/static/images/LF/LF_Jobs/HoH/1_rss.png"
